--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -82,6 +82,39 @@
 				<version>3.1.0</version><!--$NO-MVN-MAN-VER$ -->
 			</plugin>
 			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.11</version>
+				<configuration>
+					<excludes>
+						<exclude>com/devsuperior/DSCommerce/DsCommerceApplication.class</exclude>
+						<exclude>com/devsuperior/DSCommerce/config/**</exclude>
+						<exclude>com/devsuperior/DSCommerce/entities/**</exclude>
+						<exclude>com/devsuperior/DSCommerce/DTO/**</exclude>
+						<exclude>com/devsuperior/DSCommerce/controllers/handlers/**</exclude>
+						<exclude>com/devsuperior/DSCommerce/services/exceptions/**</exclude>
+						<exclude>com/devsuperior/DSCommerce/services/validation/**</exclude>
+					</excludes>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>jacoco-report</id>
+						<phase>prepare-package</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>target/jacoco-report</outputDirectory>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<version>${project.parent.version}</version><!--$NO-MVN-MAN-VER$-->
