--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -21,3 +21,7 @@ email.password-recover.token.minutes=${PASSWORD_RECOVER_TOKEN_MINUTES:30}
 email.password-recover.uri=${PASSWORD_RECOVER_URI:http://localhost:5173/recover-password/}
 
 
+aws.access_key_id=${AWS_KEY}
+aws.secret_access_key=${AWS_SECRET}
+s3.bucket=${Ecommerce_BUCKET_NAME}
+s3.region=${Ecommerce_BUCKET_REGION}
